--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "W"]
+ignore = ["E741"]
 
 [tool.mypy]
 ignore_missing_imports = true
